force-app/main/default/objects/ProjectStatus__c/ProjectStatus__c.object-meta.xml
<CustomObject>
    <label>Project Status</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>