force-app/main/default/objects/ProjectStatus__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <inlineHelpText>Code Time Jira Account</inlineHelpText>
    <label>Account Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>