force-app/main/default/objects/ProjectStatus__c/fields/AverageFTE__c.field-meta.xml
<CustomField>
    <fullName>AverageFTE__c</fullName>
    <label>Average FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>