force-app/main/default/objects/ProjectStatus__c/fields/BudgetDD__c.field-meta.xml
<CustomField>
    <fullName>BudgetDD__c</fullName>
    <label>Budget (dd)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>