force-app/main/default/objects/ProjectStatus__c/fields/BudgetDeviation__c.field-meta.xml
<CustomField>
    <fullName>BudgetDeviation__c</fullName>
    <formula>BudgetDD__c - ( EstimatedToFinishDD__c +  ConsumptiveDD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>