force-app/main/default/objects/ProjectStatus__c/fields/BudgetNotes__c.field-meta.xml
<CustomField>
    <fullName>BudgetNotes__c</fullName>
    <label>Budget Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>