force-app/main/default/objects/ProjectStatus__c/fields/ConsumptiveDD__c.field-meta.xml
<CustomField>
    <fullName>ConsumptiveDD__c</fullName>
    <label>Consumptive (dd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>