force-app/main/default/objects/ProjectStatus__c/fields/CurrentStage__c.field-meta.xml
<CustomField>
    <fullName>CurrentStage__c</fullName>
    <formula>ConsumptiveDD__c / (ConsumptiveDD__c + EstimatedToFinishDD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>