force-app/main/default/objects/ProjectStatus__c/fields/DDOvernightConsumptive__c.field-meta.xml
<CustomField>
    <fullName>DDOvernightConsumptive__c</fullName>
    <label>DD Overnight Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>