force-app/main/default/objects/ProjectStatus__c/fields/DDOvernightEstimate__c.field-meta.xml
<CustomField>
    <fullName>DDOvernightEstimate__c</fullName>
    <label>DD Overnight Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>