force-app/main/default/objects/ProjectStatus__c/fields/DDTravelConsumptive__c.field-meta.xml
<CustomField>
    <fullName>DDTravelConsumptive__c</fullName>
    <label>DD Travel Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>