force-app/main/default/objects/ProjectStatus__c/fields/DDTravelEstimate__c.field-meta.xml
<CustomField>
    <fullName>DDTravelEstimate__c</fullName>
    <label>DD Travel Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>