force-app/main/default/objects/ProjectStatus__c/fields/DDWorkingConsumptive__c.field-meta.xml
<CustomField>
    <fullName>DDWorkingConsumptive__c</fullName>
    <label>DD Working Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>