force-app/main/default/objects/ProjectStatus__c/fields/DDWorkingEstimate__c.field-meta.xml
<CustomField>
    <fullName>DDWorkingEstimate__c</fullName>
    <label>DD Working Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>