force-app/main/default/objects/ProjectStatus__c/fields/EmailNotification__c.field-meta.xml
<CustomField>
    <fullName>EmailNotification__c</fullName>
    <defaultValue>&apos;stefano.bellante@nexusat.it&apos;</defaultValue>
    <label>EmailNotification</label>
    <type>Email</type>
</CustomField>