force-app/main/default/objects/ProjectStatus__c/fields/EstimatedToFinishDD__c.field-meta.xml
<CustomField>
    <fullName>EstimatedToFinishDD__c</fullName>
    <label>Estimated To Finish (dd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>