force-app/main/default/objects/ProjectStatus__c/fields/ExpectedEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedEndDate__c</fullName>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>