force-app/main/default/objects/ProjectStatus__c/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <formula>if(RemainingFTE__c == 0 ,0,ROUND(EstimatedToFinishDD__c /RemainingFTE__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTE</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>