force-app/main/default/objects/ProjectStatus__c/fields/PercentageDeviation__c.field-meta.xml
<CustomField>
    <fullName>PercentageDeviation__c</fullName>
    <formula>BudgetDeviation__c /  BudgetDD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>