force-app/main/default/objects/ProjectStatus__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Statuses</relationshipLabel>
    <relationshipName>Project_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>