force-app/main/default/objects/ProjectStatus__c/fields/ProjectSentimentSemaphore__c.field-meta.xml
<CustomField>
    <fullName>ProjectSentimentSemaphore__c</fullName>
    <formula>IF(ISPICKVAL(ProjectSentimentValue__c,&apos;Alarm&apos;),IMAGE(&quot;/resource/red?&quot;,&apos;Indicator&apos;, 20, 20),
IF(ISPICKVAL(ProjectSentimentValue__c,&apos;Warning&apos;),IMAGE(&quot;/resource/yellow?&quot;,&apos;Indicator&apos;, 20, 20),
IF(ISPICKVAL(ProjectSentimentValue__c,&apos;Ok&apos;),IMAGE(&quot;/resource/green&quot;,&apos;Indicator&apos; , 20, 20),&quot;Impostare valore di Project Sentiment&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Sentiment Semaphore</label>
    <type>Text</type>
</CustomField>