force-app/main/default/objects/ProjectStatus__c/fields/ProjectSentimentValue__c.field-meta.xml
<CustomField>
    <fullName>ProjectSentimentValue__c</fullName>
    <label>Project Sentiment Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>