force-app/main/default/objects/ProjectStatus__c/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <label>ReferenceNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>