force-app/main/default/objects/ProjectStatus__c/fields/RemainingFTE__c.field-meta.xml
<CustomField>
    <fullName>RemainingFTE__c</fullName>
    <label>Remaining FTE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>