force-app/main/default/objects/ProjectStatus__c/fields/SumAccuracyDD__c.field-meta.xml
<CustomField>
    <fullName>SumAccuracyDD__c</fullName>
    <label>Σ Accuracy (dd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>