force-app/main/default/objects/ProjectStatus__c/fields/SumAmountProject__c.field-meta.xml
<CustomField>
    <fullName>SumAmountProject__c</fullName>
    <label>Σ Amount Project</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>