force-app/main/default/objects/ProjectStatus__c/fields/SumEstTimeRemainingDD__c.field-meta.xml
<CustomField>
    <fullName>SumEstTimeRemainingDD__c</fullName>
    <label>Σ Est. Time Remaining (dd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>