force-app/main/default/objects/ProjectStatus__c/fields/SumOriginalEstimateDD__c.field-meta.xml
<CustomField>
    <fullName>SumOriginalEstimateDD__c</fullName>
    <label>Σ Original Estimate (dd)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>