force-app/main/default/objects/ProjectStatus__c/fields/TimeTrackingReport__c.field-meta.xml
<CustomField>
    <fullName>TimeTrackingReport__c</fullName>
    <label>Time Tracking Report</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>