force-app/main/default/objects/ProjectStatus__c/fields/TotalConsumptive__c.field-meta.xml
<CustomField>
    <fullName>TotalConsumptive__c</fullName>
    <formula>DDOvernightConsumptive__c +  DDTravelConsumptive__c +  DDWorkingConsumptive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dato Proveniente da Intranet</inlineHelpText>
    <label>Total Consumptive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>