force-app/main/default/objects/ProjectStatus__c/fields/TotalEstimate__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimate__c</fullName>
    <formula>DDOvernightEstimate__c +  DDTravelEstimate__c +  DDWorkingEstimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>