force-app/main/default/objects/ProjectStatus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Analisi requisiti,Onboarding,WIP,UAT,Deploy in Produzione,Supporto post go-live,Completato</value>
    </filters>
    <label>All</label>
</ListView>